# french

./: README  README.md  dune-project  example.cnf  example.dim  french.install  french.opam
lib/: dune  parser.ml  sat.ml
test/: dune  test_french.ml
